--- a/PyBank/main.ipynb
+++ b/PyBank/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -51,8 +51,19 @@
     "print(f\"Total: ${sum(total_profit)}\")\n",
     "print(f\"Average Change: {round(sum(monthly_change)/len(monthly_change),2)}\")\n",
     "print(f\"Greatest Increase in Profits: {months[max_increase_month]} (${(str(max_increase_value))})\")\n",
-    "print(f\"Greatest Decrease in Profits: {months[max_decrease_month]} (${(str(max_decrease_value))})\")\n"
+    "print(f\"Greatest Decrease in Profits: {months[max_decrease_month]} (${(str(max_decrease_value))})\")\n",
+    "\n",
+    "text_file = Path('../PyBank/','Financial_Analysis.txt')\n",
+    "\n",
+    "with open(text_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
