--- a/PyBank/main.ipynb
+++ b/PyBank/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,20 @@
     "\n",
     "text_file = Path('../PyBank/','Financial_Analysis.txt')\n",
     "\n",
-    "with open(text_file)"
+    "with open(text_file,'w') as file:\n",
+    "    file.write(\"Financial Analysis\")\n",
+    "    file.write(\"\\n\")\n",
+    "    file.write(\"----------------------------\")\n",
+    "    file.write(\"\\n\")\n",
+    "    file.write(f\"Total Months: {len(total_months)}\")\n",
+    "    file.write(\"\\n\")\n",
+    "    file.write(f\"Total: ${sum(total_profit)}\")\n",
+    "    file.write(\"\\n\")\n",
+    "    file.write(f\"Average Change: {round(sum(monthly_profit_change)/len(monthly_profit_change),2)}\")\n",
+    "    file.write(\"\\n\")\n",
+    "    file.write(f\"Greatest Increase in Profits: {total_months[max_increase_month]} (${(str(max_increase_value))})\")\n",
+    "    file.write(\"\\n\")\n",
+    "    file.write(f\"Greatest Decrease in Profits: {total_months[max_decrease_month]} (${(str(max_decrease_value))})\")\n"
    ]
   },
   {
